[gd_scene load_steps=12 format=2]

[ext_resource path="res://factory/factory_machines/machine.gd" type="Script" id=1]
[ext_resource path="res://scripts/interact_area/interact_area.tscn" type="PackedScene" id=2]
[ext_resource path="res://factory/factory_machines/alarm_lamp.tscn" type="PackedScene" id=3]
[ext_resource path="res://factory/factory_machines/meshes/machine_a.tscn" type="PackedScene" id=4]
[ext_resource path="res://factory/tool_stations/tool_meshes/hammer_tool.tscn" type="PackedScene" id=5]
[ext_resource path="res://factory/tool_stations/tool_meshes/wrench_tool.tscn" type="PackedScene" id=6]
[ext_resource path="res://factory/factory_machines/tool_required.gd" type="Script" id=7]

[sub_resource type="CylinderShape" id=8]
height = 2.14648
radius = 0.5

[sub_resource type="CylinderShape" id=11]
height = 2.76501
radius = 0.8

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "rotate_loop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="Machine" type="StaticBody" groups=["machine"]]
script = ExtResource( 1 )

[node name="MachineA" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 8 )

[node name="InteractArea" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )

[node name="CollisionShape" parent="InteractArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.577375, 0 )
shape = SubResource( 11 )

[node name="AlarmLamp" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.112011, 1.05885, 0.147428 )

[node name="ToolRequired" type="Spatial" parent="."]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 1.53921, 0 )
script = ExtResource( 7 )

[node name="WrenchMesh" parent="ToolRequired" instance=ExtResource( 6 )]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )

[node name="HammerMesh" parent="ToolRequired" instance=ExtResource( 5 )]
transform = Transform( 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0, 0, 1, 0, 0, 0 )
visible = false
skeleton = NodePath("")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ToolRequired"]
root_node = NodePath("../HammerMesh")
autoplay = "rotate_loop"
anims/RESET = SubResource( 12 )
anims/rotate_loop = SubResource( 13 )

[connection signal="interacted" from="InteractArea" to="." method="_on_interacted"]

[editable path="InteractArea"]
